syntax = "proto3";

option csharp_namespace = "Proto.DTO.Client";

import "DTO/ticket.proto";
import "DTO/time_slot.proto";
import "DTO/statistics_data.proto";
import "DTO/trace_data.proto";

message TrackingControlDataProto {
  TicketProto ticket_proto = 1;
  TimeSlotProto time_slot_proto = 2;
  StatisticsDataProto statistics_data_proto = 3;
  TraceDataProto traceData = 4;
}